--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
-    
+    <ul>
+        <li>hétfő</li>
+        <li>kedd</li>
+        <li>szerda</li>
+    </ul>
 </body>
 </html>
