--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <li>kedd</li>
         <li>szerda</li>
     </ul>
-    <a href="bankitatabanya.hu">Bánki weboldala</a>
+    <a href="bankitatabanya.hu">Bánki weboldala</a> <br> <br>
+    <input type="text" placeholder="Név">
+    <input type="button" value="Oké">
 </body>
 </html>
