--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     </ul>
     <a href="bankitatabanya.hu">Bánki weboldala</a> <br> <br>
     <input type="text" placeholder="Név">
-    <input type="button" value="Oké">
+    <input type="submit">
 </body>
 </html>
