Aki á-t mond, mondjon bé-t is.

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <a href="bankitatabanya.hu">Bánki weboldala</a> <br> <br>
     <input type="text" placeholder="Név">
     <input type="submit">
+    <p class="alcim">Aki á-t mond, mondjon bé-t is.</p>
 </body>
 </html>
