--- a/index.html
+++ b/index.html
@@ -17,5 +17,15 @@
     <input type="text" placeholder="Név">
     <input type="submit">
     <p class="alcim">Aki á-t mond, mondjon bé-t is.</p>
+    <div>
+        Tetszőleges szöveg
+    </div>
+    <div>
+            <ol>
+                <li>egy</li>
+                <li>kettő</li>
+                <li>három</li>
+            </ol>
+    </div>
 </body>
 </html>
