--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li>hétfő</li>
         <li>kedd</li>
-        <li>szerda</li>
+        <li>szerda buzi vagyok</li>
     </ul>
     <a href="bankitatabanya.hu">Bánki weboldala</a> <br> <br>
     <input type="text" placeholder="Név">
@@ -27,5 +27,6 @@
                 <li>három</li>
             </ol>
     </div>
+    <img src="KepB.jpg" alt="">
 </body>
 </html>
