--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
                 <li>három</li>
             </ol>
     </div>
+    <img src="pixelplanet--31496--9657.png" alt="">
 </body>
 </html>
