--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li>hétfő</li>
         <li>kedd</li>
-        <li>szerda buzi vagyok</li>
+        <li>szerda</li>
     </ul>
     <a href="bankitatabanya.hu">Bánki weboldala</a> <br> <br>
     <input type="text" placeholder="Név">
